# specterext-dummy

./: .gitignore  MANIFEST.in  README.md  Readme.md  pyproject.toml  requirements.txt  setup.cfg
dummy/: controller.py  service.py
dummy/templates/dummy/: index.jinja  settings.jinja
dummy/templates/dummy/components/: dummy_menu.jinja  dummy_tab.jinja
src/dummy/: service.py
src/dummy/templates/dummy/: index.jinja
src/dummyorg/specterext/dummy/: __main__.py  app_config.py  config.py  controller.py  service.py
src/dummyorg/specterext/dummy/devices/: devicename.py
src/dummyorg/specterext/dummy/static/dummy/css/: styles.css
src/dummyorg/specterext/dummy/templates/dummy/: base.jinja  index.jinja  settings.jinja  transactions.jinja
src/dummyorg/specterext/dummy/templates/dummy/components/: dummy_menu.jinja  dummy_tab.jinja
tests/: test_test.py
