[metadata]
name = {{ext.org}}_{{ext.id}}
version = 0.0.1
author = {{ext.author}}
author_email = {{ext.author_email}}
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ext.org}}/specterext-{{ext.id}}
project_urls =
    Bug Tracker = https://github.com/{{ext.org}}/specterext-{{ext.id}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src
